# tcp_webcam

./: CMakeLists.txt  client.cpp  server.cpp
